# pcubature

./: CHANGELOG.md  README.md  cabal.config  pcubature.cabal  stack.yaml
.essais/: essai01.hs  essai02.hs  essai03.hs  essai04.hs  essai05.hs
.github/: README.md
.github/workflows/: Stack.yml
src/Numeric/Integration/: PolyhedralCubature.hs
tests/: Main.hs
