cabal-version:       2.2

name:                pcubature
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/pcubature#readme
license:             BSD-3-Clauselicense:             GPL-3.0-only
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2023 Stéphane Laurent
category:            Numeric, Integration
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Integration.PolyhedralCubature
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6.2.1 && < 0.8
					 , delaunayNd >= 0.1.0.2 && < 0.2
					 , hspray >= 0.1.0.0 && < 0.2
					 , scubature >= 1.1.0.0 && < 1.2
					 , vector >= 0.13.0 && < 0.14
					 , vertexenum >= 0.1.1.0 && < 0.2
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/stla/pcubature
